# imgeaser

./: .gitignore  Makefile  Pipfile  README.rst  precommit.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: requirements.rst
docs/source/: api.rst  conf.py  examples.rst  index.rst
examples/: build_doc_images.py
imgeaser/: __init__.py  __version__.py  imgeaser.py  utility.py
src/imgeaser/: __init__.py  imgeaser.py  utility.py
src/imgeaser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: common.py  spam.py  test_imgeaser.py  test_utility.py
